@@ -2006,6 +2006,7 @@ newtmpl_delete=Delete Selected Templates
 tmpl_title1=Create Server Template
 tmpl_title2=Edit Server Template
 tmpl_title3=Clone Server Template
+tmpl_default=From default settings
 tmpl_header=Virtual server template details
 tmpl_name=Template name
 tmpl_skel=Skeleton directory for files
